--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR" class="">
+<html lang="pt-BR" class="light">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,12 +12,12 @@
 </head>
 <body>
     <header>
-    <img id="perfil-image" src="./assets/Ellipse.png" alt="Foto perfil João Miguel">
-    <p>@joaomiguelg</p>
+        <img id="perfil-image" src="./assets/Ellipse.png" alt="Foto perfil João Miguel">
+        <p>@joaomiguelg</p>
     </header>
     <main>
         <section id="switch">
-            <button id="switch-button"></button>
+            <button onclick="toggleMode()"></button>
             <span></span>
         </section>
         <nav>
@@ -40,12 +40,12 @@
              <a href="#" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
              <a href="#" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
         </section>
-
     </main>
     <footer> 
         <p>Desenvolvido por <a href="#" class="link-nome"> joaomiguelg</a> </p> 
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>   
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="./script.js"></script>  
 </body>
 </html>
