--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         </section>
         <nav>
             <a href="#">
-                <button class="links">Inscreva-se</button>
+                <button class="links">Meu site</button>
             </a>
-            <a href="#">
-                <button class="links">Baixe meu e-book</button>
+            <a href="https://wa.me/qr/JVSERYZOD4H3C1" target="_blank">
+                <button class="links">Entre em contato comigo</button>
             </a>
-            <a href="#">
+            <a href="https://github.com/joaomiguelg" target="_blank">
                 <button class="links">Veja meu portifólio</button>
             </a>
             <a href="#">
@@ -35,14 +35,14 @@
             </a>
         </nav>
         <section id="socials">
-             <a href="#" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-             <a href="#" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+             <a href="https://github.com/joaomiguelg" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+             <a href="https://www.instagram.com/jmgonsalves_/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
              <a href="#" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
-             <a href="#" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+             <a href="https://www.linkedin.com/in/jo%C3%A3o-miguel-gonsalves-21a605205/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
         </section>
     </main>
     <footer> 
-        <p>Desenvolvido por <a href="#" class="link-nome"> joaomiguelg</a> </p> 
+        <p>Desenvolvido por <a href="https://github.com/joaomiguelg" class="link-nome" target="_blank"> joaomiguelg</a> </p> 
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
