--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR" class="light">
+<html lang="pt-BR" class="">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img id="perfil-image" src="./assets/Ellipse.png" alt="Foto perfil João Miguel">
+        <img id="perfil-image" src="./assets/Ellipse-dark.png" alt="Foto perfil João Miguel">
         <p>@joaomiguelg</p>
     </header>
     <main>
@@ -31,7 +31,7 @@
                 <button class="links">Veja meu portifólio</button>
             </a>
             <a href="#">
-                <button class="links">Conheça o Explorer</button>
+                <button class="links">Meu último projeto</button>
             </a>
         </nav>
         <section id="socials">
